New webpack configuration & todo app

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,4 @@
 {
-  "greeting": "Привет! Это удобное приложение для твоих заметок"
+  "greeting": "Привет! Это удобное приложение для твоих заметок",
+  "add": "Добавить"
 }
